--- a/directbak.yaml
+++ b/directbak.yaml
@@ -974,7 +974,6 @@ payload:
   - '+.11ziyun.com'
   - '+.120-job.com'
   - '+.120.net'
-  - '+.12011.org'
   - '+.120185.com'
   - '+.120ask.com'
   - '+.120askimages.com'
@@ -4725,7 +4724,6 @@ payload:
   - '+.58woyou.com'
   - '+.58wzb.com'
   - '+.58xinrui.com'
-  - '+.58xs.com'
   - '+.58xs.la'
   - '+.58xs.tw'
   - '+.58xuexi.com'
@@ -4878,7 +4876,6 @@ payload:
   - '+.5imomo.com'
   - '+.5imx.com'
   - '+.5imxbbs.com'
-  - '+.5iok.com'
   - '+.5iops.com'
   - '+.5ip9.com'
   - '+.5ipatent.com'
@@ -5203,6 +5200,7 @@ payload:
   - '+.66ruian.com'
   - '+.66shouyou.com'
   - '+.66sj.com'
+  - '+.66ss.org'
   - '+.66sy.com'
   - '+.66team.com'
   - '+.66test.com'
@@ -5963,6 +5961,7 @@ payload:
   - '+.85229666.com'
   - '+.85384.com'
   - '+.853lab.com'
+  - '+.85462.lc'
   - '+.8558.org'
   - '+.85679999.com'
   - '+.857yzf.com'
@@ -7605,7 +7604,6 @@ payload:
   - '+.ahwxcs.com'
   - '+.ahxwkj.com'
   - '+.ahydnet.com'
-  - '+.ahydwy.com'
   - '+.ahyessoft.com'
   - '+.ahyouan.com'
   - '+.ahyouth.com'
@@ -7787,7 +7785,6 @@ payload:
   - '+.aimipay.net'
   - '+.aimiplay.com'
   - '+.aimo.moe'
-  - '+.aimodou.net'
   - '+.aimoge.com'
   - '+.aimsen.com'
   - '+.ainapian.com'
@@ -10951,7 +10948,6 @@ payload:
   - '+.bjdiaoyu.com'
   - '+.bjdjc.com'
   - '+.bjdllti.com'
-  - '+.bjdlzl.com'
   - '+.bjdongxin.com'
   - '+.bjdsppa.com'
   - '+.bjeasycom.com'
@@ -11035,6 +11031,7 @@ payload:
   - '+.bjnaxl.com'
   - '+.bjnsr.com'
   - '+.bjp321.com'
+  - '+.bjpag.com'
   - '+.bjpowernode.com'
   - '+.bjqcjdcj.com'
   - '+.bjqh.org'
@@ -11091,7 +11088,6 @@ payload:
   - '+.bjtcf.com'
   - '+.bjtelecom.net'
   - '+.bjtitle.com'
-  - '+.bjtjr.net'
   - '+.bjtjw.net'
   - '+.bjtjzx.com'
   - '+.bjtlky888.com'
@@ -11717,6 +11713,7 @@ payload:
   - '+.btwob.net'
   - '+.btwuji.com'
   - '+.btxl8.com'
+  - '+.btydjxc.com'
   - '+.btyou.com'
   - '+.btzhcc.com'
   - '+.buaaer.com'
@@ -12850,6 +12847,7 @@ payload:
   - '+.cdnhwc5.com'
   - '+.cdnhwc6.com'
   - '+.cdnhwc8.com'
+  - '+.cdnhwcedt124.com'
   - '+.cdnhwchcg02.com'
   - '+.cdnhwcibv122.com'
   - '+.cdnidc.net'
@@ -13168,7 +13166,6 @@ payload:
   - '+.cgsfusion.com'
   - '+.cgsoft.net'
   - '+.cgtblog.com'
-  - '+.cgtime.net'
   - '+.cgtn.com'
   - '+.cgtsj.com'
   - '+.cgtsj.org'
@@ -14392,7 +14389,6 @@ payload:
   - '+.chjso.com'
   - '+.chkj365.com'
   - '+.chklingw.com'
-  - '+.chlahb.com'
   - '+.chloe99.com'
   - '+.chmecc.org'
   - '+.chmed.net'
@@ -14822,6 +14818,7 @@ payload:
   - '+.cjhxfund.com'
   - '+.cjienc.com'
   - '+.cjiit.com'
+  - '+.cjjd04.com'
   - '+.cjjd08.com'
   - '+.cjjhb.com'
   - '+.cjjjs.com'
@@ -14955,6 +14952,7 @@ payload:
   - '+.clouddn.com'
   - '+.clouddns.vip'
   - '+.clouddream.net'
+  - '+.cloudflare-cn.com'
   - '+.cloudflare520.com'
   - '+.cloudgap.net'
   - '+.cloudgfw.com'
@@ -16971,6 +16969,7 @@ payload:
   - '+.da.anythinktech.com'
   - '+.da88.net'
   - '+.daanbar.com'
+  - '+.daanche.com'
   - '+.daba.com'
   - '+.dabaicai.com'
   - '+.dabaicai.org'
@@ -17823,6 +17822,7 @@ payload:
   - '+.dexindat.com'
   - '+.dexingrv.com'
   - '+.dexinsg.com'
+  - '+.dextercai.com'
   - '+.dexuee.com'
   - '+.dexunyun.com'
   - '+.deyang5.com'
@@ -21310,7 +21310,6 @@ payload:
   - '+.fayiyi.com'
   - '+.fayurumen.com'
   - '+.fazhijx.com'
-  - '+.fazj.org'
   - '+.fb.mu'
   - '+.fbabi.com'
   - '+.fbaichuan.com'
@@ -25806,7 +25805,6 @@ payload:
   - '+.hdhgzx.com'
   - '+.hdhospital.com'
   - '+.hdhui.com'
-  - '+.hdingsheng.com'
   - '+.hdj.me'
   - '+.hdjay.com'
   - '+.hdjwww.com'
@@ -28047,7 +28045,6 @@ payload:
   - '+.huxiu.com'
   - '+.huxiu.link'
   - '+.huxiucdn.com'
-  - '+.huya.cm'
   - '+.huya.com'
   - '+.huya040.xyz'
   - '+.huyahaha.com'
@@ -29471,7 +29468,6 @@ payload:
   - '+.imomoe.jp'
   - '+.imooc.com'
   - '+.imoocc.com'
-  - '+.imoodou.com'
   - '+.imoonfm.com'
   - '+.imooo.com'
   - '+.imopan.com'
@@ -40607,6 +40603,7 @@ payload:
   - '+.ntxiru.com'
   - '+.ntyswlkj.com'
   - '+.ntyy888.com'
+  - '+.ntzcb2b.com'
   - '+.nu1l.com'
   - '+.nuan.io'
   - '+.nuandao.com'
@@ -41417,6 +41414,7 @@ payload:
   - '+.ouyada.com'
   - '+.ouyaoxiazai.com'
   - '+.ouyeel.com'
+  - '+.ouyi.date'
   - '+.ouyi.zone'
   - '+.ouyingyimin.com'
   - '+.ouzhougoufang.com'
@@ -43457,6 +43455,7 @@ payload:
   - '+.qihoo.net'
   - '+.qihu.com'
   - '+.qihu.org'
+  - '+.qihuapi.com'
   - '+.qihucdn.com'
   - '+.qihuiwang.com'
   - '+.qihuorumen.com'
@@ -44248,6 +44247,8 @@ payload:
   - '+.queniucf.com'
   - '+.queniuck.com'
   - '+.queniufm.com'
+  - '+.queniuhy.com'
+  - '+.queniukr.com'
   - '+.queniuso.com'
   - '+.queniusy.com'
   - '+.queniuuf.com'
@@ -45607,6 +45608,7 @@ payload:
   - '+.saiyangame.com'
   - '+.saiyouedu.net'
   - '+.saiyunyx.com'
+  - '+.sakesi.club'
   - '+.sakway.com'
   - '+.salasolo.com'
   - '+.saleoilpaintings.com'
@@ -46528,7 +46530,6 @@ payload:
   - '+.shanghai-intex.com'
   - '+.shanghai-map.net'
   - '+.shanghaiairport.com'
-  - '+.shanghaiboxu.com'
   - '+.shanghaicaiyi.com'
   - '+.shanghaichannel.net'
   - '+.shanghaiconcerthall.org'
@@ -47072,6 +47073,7 @@ payload:
   - '+.shiyide.com'
   - '+.shiyiyx.com'
   - '+.shiyongjun.biz'
+  - '+.shiyouhome.com'
   - '+.shiyousan.com'
   - '+.shiyu.pro'
   - '+.shiyue.com'
@@ -49691,6 +49693,7 @@ payload:
   - '+.szaiten.com'
   - '+.szande.com'
   - '+.szaudio.com'
+  - '+.szbaoly.com'
   - '+.szbbs.org'
   - '+.szbcase.com'
   - '+.szbdyd.com'
@@ -50224,7 +50227,6 @@ payload:
   - '+.taokezhushou.com'
   - '+.taokouling.com'
   - '+.taoku.com'
-  - '+.taolusm.com'
   - '+.taoluzhibo56.com'
   - '+.taolvtong.com'
   - '+.taolx.com'
@@ -51195,6 +51197,7 @@ payload:
   - '+.tjzfcg.com'
   - '+.tjzhongyiyao.com'
   - '+.tjzyec.com'
+  - '+.tjzyfw.com'
   - '+.tk-rays.com'
   - '+.tk-xiong.com'
   - '+.tk.anythinktech.com'
@@ -52459,7 +52462,6 @@ payload:
   - '+.uayangtze-volga.org'
   - '+.ub-os.com'
   - '+.ub.cc'
-  - '+.ub666.cc'
   - '+.uban.com'
   - '+.ubangmang.com'
   - '+.ubersz.com'
@@ -53786,6 +53788,7 @@ payload:
   - '+.vvipcdn.com'
   - '+.vvjob.com'
   - '+.vvkaoyan.com'
+  - '+.vvl.cc'
   - '+.vvmeiju.com'
   - '+.vvo2o.com'
   - '+.vvpgwg.xyz'
@@ -54953,6 +54956,7 @@ payload:
   - '+.wf.pub'
   - '+.wf163.com'
   - '+.wf66.com'
+  - '+.wfaozhuo.com'
   - '+.wfbaiyou.com'
   - '+.wfbbs.com'
   - '+.wfbrood.com'
@@ -55242,7 +55246,6 @@ payload:
   - '+.whuhzzs.com'
   - '+.whuspark.com'
   - '+.whuss.com'
-  - '+.whusu.org'
   - '+.whut-px.com'
   - '+.whutech.com'
   - '+.whwanshun.com'
@@ -58015,7 +58018,6 @@ payload:
   - '+.xiuno.com'
   - '+.xiupin.com'
   - '+.xiuren.com'
-  - '+.xiurenb.com'
   - '+.xiushao.com'
   - '+.xiusheji.com'
   - '+.xiusheji.net'
@@ -58303,10 +58305,7 @@ payload:
   - '+.xmsoushu.com'
   - '+.xmspace.net'
   - '+.xmtbang.com'
-  - '+.xmttz02.pw'
   - '+.xmtyy.net'
-  - '+.xmtyy02.pw'
-  - '+.xmtyy04.pw'
   - '+.xmuchong.com'
   - '+.xmuli.tech'
   - '+.xmwan.com'
@@ -60001,6 +60000,7 @@ payload:
   - '+.yingyonghui.com'
   - '+.yingyongmiao.com'
   - '+.yingyu.com'
+  - '+.yingyuchat.com'
   - '+.yingyurumen.com'
   - '+.yingyushijie.com'
   - '+.yingyuweb.com'
@@ -61738,7 +61738,6 @@ payload:
   - '+.yx0599.com'
   - '+.yx090.com'
   - '+.yx10011.com'
-  - '+.yx129.net'
   - '+.yx192.com'
   - '+.yx231.com'
   - '+.yx643.com'
@@ -61831,7 +61830,6 @@ payload:
   - '+.yy845.com'
   - '+.yyasp.net'
   - '+.yybox.cc'
-  - '+.yyccia.com'
   - '+.yycec.com'
   - '+.yyclouds.com'
   - '+.yyclub.org'
@@ -62247,6 +62245,7 @@ payload:
   - '+.zechunbengye.com'
   - '+.zeda1.com'
   - '+.zedukm.com'
+  - '+.zeekrlife.com'
   - '+.zeelis.com'
   - '+.zeesin.com'
   - '+.zego.im'
