--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2317,7 +2317,6 @@ payload:
   - '+.2898.com'
   - '+.28beiduo.com'
   - '+.28ka.com'
-  - '+.28kai.cc'
   - '+.28khy.com'
   - '+.28rv.com'
   - '+.28tui.com'
@@ -2338,7 +2337,6 @@ payload:
   - '+.298app1.com'
   - '+.299906.com'
   - '+.29dnue.com'
-  - '+.29gl.com'
   - '+.29xf.com'
   - '+.29yx.com'
   - '+.2abc8.com'
@@ -2370,7 +2368,6 @@ payload:
   - '+.2fz1.com'
   - '+.2g88.vip'
   - '+.2gdt.com'
-  - '+.2geh.com'
   - '+.2gei.com'
   - '+.2google.com'
   - '+.2gxw.com'
@@ -4222,7 +4219,6 @@ payload:
   - '+.521tieba.com'
   - '+.521up.com'
   - '+.52237377.com'
-  - '+.522g.com'
   - '+.523333.com'
   - '+.52372.com'
   - '+.523touzi.com'
@@ -4406,7 +4402,6 @@ payload:
   - '+.52ugame.xyz'
   - '+.52uyn.com'
   - '+.52vr.com'
-  - '+.52waha.com'
   - '+.52wana.com'
   - '+.52wanh5.cc'
   - '+.52wlw.com'
@@ -5274,7 +5269,6 @@ payload:
   - '+.68youhui.com'
   - '+.69.com'
   - '+.69005a.com'
-  - '+.6903.com'
   - '+.69260.com'
   - '+.6928.info'
   - '+.6934.net'
@@ -5865,7 +5859,6 @@ payload:
   - '+.80ym.com'
   - '+.80zhan.com'
   - '+.8104510.com'
-  - '+.8108188.com'
   - '+.810840.com'
   - '+.812361.com'
   - '+.81265.net'
@@ -6173,7 +6166,6 @@ payload:
   - '+.8btc-ops.com'
   - '+.8btc.com'
   - '+.8btm.com'
-  - '+.8c8h.com'
   - '+.8cheche.com'
   - '+.8cname.com'
   - '+.8cnet.com'
@@ -6241,6 +6233,7 @@ payload:
   - '+.8yao.cc'
   - '+.8ym8.com'
   - '+.8yw.xyz'
+  - '+.8yx.com'
   - '+.8yzw.com'
   - '+.8z.net'
   - '+.8zhuayu.cc'
@@ -7031,6 +7024,7 @@ payload:
   - '+.9u.net'
   - '+.9upk.com'
   - '+.9v.com'
+  - '+.9vf.com'
   - '+.9w9.com'
   - '+.9wee.com'
   - '+.9wee.net'
@@ -7306,7 +7300,6 @@ payload:
   - '+.adanxing.com'
   - '+.adapay.tech'
   - '+.adarrive.com'
-  - '+.adashuo.com'
   - '+.adaxin.com'
   - '+.adbats.com'
   - '+.adbxb.com'
@@ -12035,7 +12028,6 @@ payload:
   - '+.c1ass.com'
   - '+.c1s.com'
   - '+.c2h4.org'
-  - '+.c32356.com'
   - '+.c360dn.com'
   - '+.c366.com'
   - '+.c3acg.com'
@@ -13482,7 +13474,6 @@ payload:
   - '+.cheng-nuo.com'
   - '+.cheng-sen.com'
   - '+.cheng95.com'
-  - '+.cheng95.net'
   - '+.chengadx.com'
   - '+.chengchuanren.com'
   - '+.chengdebank.com'
@@ -14819,6 +14810,7 @@ payload:
   - '+.cjienc.com'
   - '+.cjiit.com'
   - '+.cjjd04.com'
+  - '+.cjjd07.com'
   - '+.cjjd08.com'
   - '+.cjjhb.com'
   - '+.cjjjs.com'
@@ -16096,7 +16088,6 @@ payload:
   - '+.cpph.com'
   - '+.cppinfo.com'
   - '+.cpplay.com'
-  - '+.cpplive.com'
   - '+.cppoc.com'
   - '+.cpppc.org'
   - '+.cpppf.org'
@@ -16520,7 +16511,6 @@ payload:
   - '+.csxww.com'
   - '+.csyangchen.com'
   - '+.csyestar.com'
-  - '+.csyfe.com'
   - '+.csytv.com'
   - '+.csyuyism.com'
   - '+.cszb556.com'
@@ -20322,7 +20312,6 @@ payload:
   - '+.emeor.com'
   - '+.emepu.com'
   - '+.emilhk.com'
-  - '+.emilyliangfilms.com'
   - '+.emjob.com'
   - '+.emlinix.com'
   - '+.emlog.net'
@@ -22102,6 +22091,7 @@ payload:
   - '+.fosun-uhi.com'
   - '+.fosun.com'
   - '+.fosunholiday.com'
+  - '+.fosunpharma.com'
   - '+.fotao.name'
   - '+.fotao9.com'
   - '+.fotile.com'
@@ -26433,7 +26423,6 @@ payload:
   - '+.hisoft.com'
   - '+.hisofts.com'
   - '+.hisonracking.com'
-  - '+.hisports.com'
   - '+.histarter.com'
   - '+.histriver.com'
   - '+.hisupplier.com'
@@ -26614,7 +26603,6 @@ payload:
   - '+.hly.com'
   - '+.hlybar.com'
   - '+.hlytec.com'
-  - '+.hlyy.in'
   - '+.hlzq.com'
   - '+.hm-3223.net'
   - '+.hm120.com'
@@ -26995,7 +26983,6 @@ payload:
   - '+.hortor020.com'
   - '+.hortorgames.com'
   - '+.hosizoraworks.org'
-  - '+.hosjjk.com'
   - '+.hosory.com'
   - '+.hospmall.com'
   - '+.hostadm.net'
@@ -28053,7 +28040,6 @@ payload:
   - '+.huyaohui.com'
   - '+.huyaruanwen.com'
   - '+.huyn.com'
-  - '+.huynet.com'
   - '+.huyouxiong.com'
   - '+.huyuncdn.com'
   - '+.huyuxx.com'
@@ -28167,6 +28153,7 @@ payload:
   - '+.hxytea.com'
   - '+.hxytw.com'
   - '+.hxyxsj.com'
+  - '+.hxzq.net'
   - '+.hxzs31.com'
   - '+.hy-la.com'
   - '+.hy-zr.com'
@@ -33072,7 +33059,6 @@ payload:
   - '+.kanghui.com'
   - '+.kanghuwang.com'
   - '+.kangjian888.com'
-  - '+.kangkang.work'
   - '+.kanglaohui.com'
   - '+.kangle.net'
   - '+.kanglu.com'
@@ -35150,7 +35136,6 @@ payload:
   - '+.lewang.ltd'
   - '+.leweicn.com'
   - '+.lewen.la'
-  - '+.lewen2.com'
   - '+.lewen567.com'
   - '+.lewen88.com'
   - '+.lewenba.cc'
@@ -39232,6 +39217,7 @@ payload:
   - '+.mwrf.net'
   - '+.mwrfchina.org'
   - '+.mwrftech.com'
+  - '+.mwryx.com'
   - '+.mwyzhcdn.com'
   - '+.mx-industry.com'
   - '+.mx175.com'
@@ -39562,7 +39548,6 @@ payload:
   - '+.mzhfm.com'
   - '+.mzhujia.com'
   - '+.mzjmedia.com'
-  - '+.mzmjapp.com'
   - '+.mzone.site'
   - '+.mzread.com'
   - '+.mzres.com'
@@ -42863,7 +42848,6 @@ payload:
   - '+.pusa123.com'
   - '+.push2u.com'
   - '+.pushauction.com'
-  - '+.pushenbbs.com'
   - '+.pushgrid.net'
   - '+.pushjoy.com'
   - '+.pushthink.com'
@@ -43857,7 +43841,6 @@ payload:
   - '+.ql789.com'
   - '+.qlbchina.com'
   - '+.qlchat.com'
-  - '+.qlcoder.com'
   - '+.qldzj.com'
   - '+.qlgpy.com'
   - '+.qlidc.com'
@@ -46072,7 +46055,6 @@ payload:
   - '+.sdsgwy.com'
   - '+.sdshshb.com'
   - '+.sdsmefina.com'
-  - '+.sdsszt.com'
   - '+.sdtdata.com'
   - '+.sdtrxx.com'
   - '+.sdtsrf.com'
@@ -47821,7 +47803,6 @@ payload:
   - '+.siphrd.com'
   - '+.sipo-gd.com'
   - '+.sipo-hb.com'
-  - '+.sipo-pesc.com'
   - '+.sipo-sc.com'
   - '+.sipo-tj.com'
   - '+.siportal.cdnetworks.com'
@@ -48758,7 +48739,6 @@ payload:
   - '+.squarecn.com'
   - '+.squarefong.com'
   - '+.sqxy.net'
-  - '+.sqzapp.com'
   - '+.sqzw.com'
   - '+.srcb.com'
   - '+.srcbcz.com'
@@ -48918,7 +48898,6 @@ payload:
   - '+.staticaa.com'
   - '+.staticdn.net'
   - '+.staticec.com'
-  - '+.staticf.com'
   - '+.staticfile.org'
   - '+.statickksmg.com'
   - '+.statics.cc'
@@ -49167,6 +49146,7 @@ payload:
   - '+.sumavision.com'
   - '+.sumeme.com'
   - '+.sumgotea.com'
+  - '+.sumian.com'
   - '+.suming.in'
   - '+.sumly.net'
   - '+.summall.com'
@@ -49297,7 +49277,6 @@ payload:
   - '+.supdri.com'
   - '+.supeeder.com'
   - '+.supei.com'
-  - '+.super-mall.shop'
   - '+.super-mt.com'
   - '+.superayi.com'
   - '+.superboss.cc'
@@ -50097,7 +50076,6 @@ payload:
   - '+.tangguoxian.com'
   - '+.tanghushi.com'
   - '+.tangjie.me'
-  - '+.tangjiu.com'
   - '+.tangkabj.com'
   - '+.tanglei.name'
   - '+.tangmi.net'
@@ -52363,7 +52341,6 @@ payload:
   - '+.tytywuliu.com'
   - '+.tytzzy.com'
   - '+.tyu89.wang'
-  - '+.tyueo.com'
   - '+.tyust.net'
   - '+.tyuyan.com'
   - '+.tyuyan.net'
@@ -55080,7 +55057,6 @@ payload:
   - '+.whevt.com'
   - '+.whewash.com'
   - '+.whfazun.com'
-  - '+.whfcsc.org'
   - '+.whfeiyou.com'
   - '+.whfengli.com'
   - '+.whflfa.com'
@@ -56285,7 +56261,6 @@ payload:
   - '+.wuxinban.com'
   - '+.wuxiqiangheng.com'
   - '+.wuxiwang.net'
-  - '+.wuxu92.com'
   - '+.wuyang-honda.com'
   - '+.wuyangplatform.com'
   - '+.wuyazi.com'
@@ -57474,7 +57449,6 @@ payload:
   - '+.xiappt.com'
   - '+.xiaqunfeng.cc'
   - '+.xiarenzhuxin.com'
-  - '+.xiarikui.com'
   - '+.xiarj.com'
   - '+.xiashu.app'
   - '+.xiataoseo.com'
@@ -58152,7 +58126,6 @@ payload:
   - '+.xjytjt.com'
   - '+.xjzdjx.com'
   - '+.xjzhongwu.com'
-  - '+.xjzkzx.com'
   - '+.xjzlyy.com'
   - '+.xjzsks.com'
   - '+.xjzxedu.net'
@@ -58280,7 +58253,6 @@ payload:
   - '+.xml-journal.net'
   - '+.xmlhifi.com'
   - '+.xmlure.com'
-  - '+.xmluren.com'
   - '+.xmlvbarcode.com'
   - '+.xmmade.com'
   - '+.xmmama.com'
@@ -58876,7 +58848,6 @@ payload:
   - '+.xxlcn.com'
   - '+.xxliudsp.com'
   - '+.xxlwin.com'
-  - '+.xxm.plus'
   - '+.xxmac.com'
   - '+.xxmanhua.info'
   - '+.xxmh117.com'
@@ -60471,7 +60442,6 @@ payload:
   - '+.ynkmjj.com'
   - '+.ynlibs.com'
   - '+.ynlvyou20.com'
-  - '+.ynlyfw.com'
   - '+.ynmec.com'
   - '+.ynnits.com'
   - '+.ynpxrz.com'
@@ -61029,6 +60999,7 @@ payload:
   - '+.ys7.com'
   - '+.ys720.com'
   - '+.ys8.com'
+  - '+.ys991.com'
   - '+.ysaedesign.com'
   - '+.ysali.com'
   - '+.yscase.com'
@@ -61845,6 +61816,7 @@ payload:
   - '+.yyearth.com'
   - '+.yyedufeb.com'
   - '+.yyeduox.com'
+  - '+.yyedurat.com'
   - '+.yyes.shop'
   - '+.yyestar.com'
   - '+.yyetss.com'
