--- a/directbak.yaml
+++ b/directbak.yaml
@@ -850,6 +850,7 @@ payload:
   - '+.110hack.com'
   - '+.110tm.com'
   - '+.110zhibo.com'
+  - '+.111036.com'
   - '+.111111111.com'
   - '+.11111s.info'
   - '+.111155268.com'
@@ -2471,7 +2472,6 @@ payload:
   - '+.311wan.com'
   - '+.312168.com'
   - '+.312green.com'
-  - '+.312yy.com'
   - '+.313.com'
   - '+.313515.com'
   - '+.3145.com'
@@ -2562,6 +2562,7 @@ payload:
   - '+.3259.com'
   - '+.326pay.com'
   - '+.32800.com'
+  - '+.328888.xyz'
   - '+.328f.com'
   - '+.328vip.com'
   - '+.3290.com'
@@ -3770,7 +3771,6 @@ payload:
   - '+.51fangan.com'
   - '+.51fanli.com'
   - '+.51fanli.net'
-  - '+.51fdc.com'
   - '+.51feels.com'
   - '+.51feibao.com'
   - '+.51findshop.com'
@@ -3982,7 +3982,6 @@ payload:
   - '+.51rong.com'
   - '+.51rp.com'
   - '+.51rry.com'
-  - '+.51rz.com'
   - '+.51rz.org'
   - '+.51sai.com'
   - '+.51sanhu.com'
@@ -7130,6 +7129,7 @@ payload:
   - '+.abcdocker.com'
   - '+.abcdv.net'
   - '+.abcfintech.com'
+  - '+.abcgonglue.com'
   - '+.abchina.com'
   - '+.abcjiaoyu.com'
   - '+.abcjifang.com'
@@ -10417,6 +10417,7 @@ payload:
   - '+.bfsutw.com'
   - '+.bftq.com'
   - '+.bftv.com'
+  - '+.bfvvs.com'
   - '+.bfw.cc'
   - '+.bfyx.com'
   - '+.bfyx.net'
@@ -10624,6 +10625,8 @@ payload:
   - '+.bilibiliyoo.com'
   - '+.bilicdn1.com'
   - '+.bilicdn2.com'
+  - '+.bilicomic.com'
+  - '+.bilicomics.com'
   - '+.biligame.com'
   - '+.biligame.net'
   - '+.bilihot.com'
@@ -12198,6 +12201,9 @@ payload:
   - '+.caishuixxi.com'
   - '+.caistv.com'
   - '+.cait.com'
+  - '+.caitaimg1.com'
+  - '+.caitatd2.com'
+  - '+.caitazx2.com'
   - '+.caitun.com'
   - '+.caiu8.com'
   - '+.caiweiming.com'
@@ -13480,6 +13486,7 @@ payload:
   - '+.chengdechina.com'
   - '+.chengdu-expat.com'
   - '+.chengdun.com'
+  - '+.chengduzhouming.com'
   - '+.chengedeco.com'
   - '+.chengezhao.com'
   - '+.chengfeilong.com'
@@ -17339,6 +17346,7 @@ payload:
   - '+.dasungtech.com'
   - '+.data380.com'
   - '+.data5u.com'
+  - '+.data777.com'
   - '+.data985.com'
   - '+.datacachelocation.com'
   - '+.datacaciques.com'
@@ -23395,6 +23403,7 @@ payload:
   - '+.giordano.com'
   - '+.giraff3.com'
   - '+.girls-frontline.com'
+  - '+.girlsfighters.com'
   - '+.girlw.net'
   - '+.girtmob.com'
   - '+.giscafer.com'
@@ -27599,6 +27608,7 @@ payload:
   - '+.huaxj.net'
   - '+.huaxuezoo.com'
   - '+.huayanchayu.com'
+  - '+.huayang.net'
   - '+.huayanghui.net'
   - '+.huayanxiu.com'
   - '+.huayanxiu.net'
@@ -29829,6 +29839,7 @@ payload:
   - '+.iplaypy.com'
   - '+.iplaysoft.com'
   - '+.ipmay.com'
+  - '+.ipmost.com'
   - '+.ipmph.com'
   - '+.ipo.hk'
   - '+.ipo.la'
@@ -34364,6 +34375,7 @@ payload:
   - '+.kzenn.com'
   - '+.kzerr.com'
   - '+.kzett.com'
+  - '+.kzeww.com'
   - '+.kzore.com'
   - '+.kzt.cc'
   - '+.kztpms.com'
@@ -37996,7 +38008,6 @@ payload:
   - '+.mhaoma.com'
   - '+.mhbras.com'
   - '+.mhealth100.com'
-  - '+.mhecy.com'
   - '+.mhg001.cc'
   - '+.mhhf.net'
   - '+.mhi-ac.com'
@@ -39147,6 +39158,7 @@ payload:
   - '+.muhai.net'
   - '+.muhoujiemi.com'
   - '+.muimg.com'
+  - '+.mujihotel-beijing.com'
   - '+.mujj.us'
   - '+.mukewang.com'
   - '+.mukool.com'
@@ -41855,6 +41867,7 @@ payload:
   - '+.pdszhtl.com'
   - '+.pdty123.com'
   - '+.pdvisa.com'
+  - '+.pdxgeek.com'
   - '+.pdxx.net'
   - '+.pe.vc'
   - '+.pe62.com'
@@ -41941,6 +41954,7 @@ payload:
   - '+.perfect99.com'
   - '+.perfectdiary.com'
   - '+.peropero.net'
+  - '+.peroperogames.com'
   - '+.personpsy.org'
   - '+.perspectivar.com'
   - '+.pesiv.com'
@@ -41950,6 +41964,7 @@ payload:
   - '+.petersonlian.com'
   - '+.petkit.com'
   - '+.petkoo.com'
+  - '+.petktasia.com'
   - '+.petmrs.com'
   - '+.petnakanojo.com'
   - '+.petpcb.com'
@@ -44497,7 +44512,6 @@ payload:
   - '+.qzccbank.com'
   - '+.qzcklm.com'
   - '+.qzclfc.com'
-  - '+.qzdigg.com'
   - '+.qzdyyy.com'
   - '+.qzhlkj.net'
   - '+.qzhmzx.com'
@@ -45486,6 +45500,7 @@ payload:
   - '+.rytx.com'
   - '+.ryweike.com'
   - '+.rywsem.com'
+  - '+.ryxiut.net'
   - '+.ryxxff.com'
   - '+.ryyqh.com'
   - '+.ryyyx.com'
@@ -47938,7 +47953,6 @@ payload:
   - '+.sjztd.com'
   - '+.sjzwww.com'
   - '+.sjzxtsh.com'
-  - '+.sjzyu.com'
   - '+.sjzyz.net'
   - '+.sjzzimu.com'
   - '+.sk163.com'
@@ -58179,6 +58193,7 @@ payload:
   - '+.xllxdg.com'
   - '+.xlm33.com'
   - '+.xlobo.com'
+  - '+.xlpai.com'
   - '+.xlpan.com'
   - '+.xlqzh.com'
   - '+.xlrocket.com'
@@ -60400,6 +60415,7 @@ payload:
   - '+.ymtc.com'
   - '+.ymtjfxly.com'
   - '+.ymtmt.com'
+  - '+.ymuuy.com'
   - '+.ymvkt.com'
   - '+.ymxinke.com'
   - '+.ymxinxi.com'
