--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1092,6 +1092,7 @@ payload:
   - '+.1278721.com'
   - '+.127tv.com'
   - '+.127xx.com'
+  - '+.127z.com'
   - '+.128456.com'
   - '+.1288.tv'
   - '+.128qd.com'
@@ -1119,6 +1120,7 @@ payload:
   - '+.1314study.com'
   - '+.1314wallet.com'
   - '+.1314zf.com'
+  - '+.1317w.com'
   - '+.131cc.com'
   - '+.131vip1.com'
   - '+.131w.tv'
@@ -1232,6 +1234,7 @@ payload:
   - '+.155175.com'
   - '+.155idc.com'
   - '+.1560168.cc'
+  - '+.1560177.cc'
   - '+.15666.com'
   - '+.15803.com'
   - '+.1588.tv'
@@ -1923,7 +1926,6 @@ payload:
   - '+.20z.com'
   - '+.21-rent.com'
   - '+.21-sun.com'
-  - '+.2100xs.com'
   - '+.210166.com'
   - '+.210997.com'
   - '+.210z.com'
@@ -2262,6 +2264,7 @@ payload:
   - '+.266.la'
   - '+.266555c.com'
   - '+.266wan.com'
+  - '+.2672721.xyz'
   - '+.2678.com'
   - '+.267gg.com'
   - '+.2686.com'
@@ -4241,6 +4244,7 @@ payload:
   - '+.528btc.com'
   - '+.528day.com'
   - '+.5293.com'
+  - '+.5298445.xyz'
   - '+.529c31.com'
   - '+.52ai.com'
   - '+.52aimo.com'
@@ -4576,6 +4580,7 @@ payload:
   - '+.5678la.com'
   - '+.567idc.com'
   - '+.5680420.cc'
+  - '+.5680433.cc'
   - '+.5684.com'
   - '+.569.com'
   - '+.56a.com'
@@ -4660,6 +4665,7 @@ payload:
   - '+.582582.com'
   - '+.582hr.com'
   - '+.583go.com'
+  - '+.58553v.com'
   - '+.5858.com'
   - '+.58611.net'
   - '+.5866.com'
@@ -4861,7 +4867,6 @@ payload:
   - '+.5ifit.com'
   - '+.5iflying.com'
   - '+.5ifund.com'
-  - '+.5ifxw.com'
   - '+.5igupiao.com'
   - '+.5ihome.net'
   - '+.5ikang.com'
@@ -5132,6 +5137,7 @@ payload:
   - '+.66152.com'
   - '+.66163.com'
   - '+.66168.net'
+  - '+.6617398ccc.com'
   - '+.66173yx.com'
   - '+.662city.com'
   - '+.662p.com'
@@ -5500,6 +5506,7 @@ payload:
   - '+.7474.com'
   - '+.7477.com'
   - '+.747wan.com'
+  - '+.74825467.vip'
   - '+.749997.com'
   - '+.74cms.com'
   - '+.74hao.com'
@@ -5997,6 +6004,7 @@ payload:
   - '+.86873.com'
   - '+.86888qp.com'
   - '+.8688g.com'
+  - '+.86898924.vip'
   - '+.86933.com'
   - '+.869d.com'
   - '+.869v.com'
@@ -6101,6 +6109,7 @@ payload:
   - '+.8864.org'
   - '+.8866.org'
   - '+.8866886688.com'
+  - '+.88669aaa.com'
   - '+.886966.com'
   - '+.886abc.com'
   - '+.886vps.com'
@@ -6841,7 +6850,6 @@ payload:
   - '+.9973.com'
   - '+.997788.com'
   - '+.998.com'
-  - '+.9981seo.com'
   - '+.9981ypk.com'
   - '+.9982.com'
   - '+.99886aaa.com'
@@ -6860,6 +6868,7 @@ payload:
   - '+.99998aaa.com'
   - '+.99999net.net'
   - '+.999ask.com'
+  - '+.999bj.com'
   - '+.999brain.com'
   - '+.999d.com'
   - '+.999dns.net'
@@ -7870,6 +7879,7 @@ payload:
   - '+.aishangcan.com'
   - '+.aishangyangyu.com'
   - '+.aishengji.com'
+  - '+.aishuge.la'
   - '+.aisila.com'
   - '+.aisino.com'
   - '+.aisinogd.com'
@@ -10978,6 +10988,7 @@ payload:
   - '+.bjhwbr.com'
   - '+.bjhzkq.com'
   - '+.bjiab.com'
+  - '+.bjicpark.com'
   - '+.bjidc.net'
   - '+.bjidit.com'
   - '+.bjipwqzx.com'
@@ -11050,7 +11061,6 @@ payload:
   - '+.bjsasc.com'
   - '+.bjsbnet.com'
   - '+.bjscfl.com'
-  - '+.bjsclp.com'
   - '+.bjscp.com'
   - '+.bjscszh.com'
   - '+.bjsctx.com'
@@ -11156,6 +11166,7 @@ payload:
   - '+.bkn.cc'
   - '+.bkpcn.com'
   - '+.bkqq.com'
+  - '+.bkt123.com'
   - '+.bkweek.com'
   - '+.bkwgf.com'
   - '+.bkxs.net'
@@ -11418,6 +11429,7 @@ payload:
   - '+.bom.ai'
   - '+.bom2buy.com'
   - '+.bomanair.com'
+  - '+.bombox.org'
   - '+.bomeeting.net'
   - '+.bomin-china.com'
   - '+.bomman.com'
@@ -11562,6 +11574,7 @@ payload:
   - '+.bqq8.com'
   - '+.bqrdh.com'
   - '+.bqteng.com'
+  - '+.bqzhh.com'
   - '+.bragood.com'
   - '+.braincf.com'
   - '+.brand4x4.com'
@@ -12909,6 +12922,7 @@ payload:
   - '+.cdzikao.com'
   - '+.cdzimo.com'
   - '+.cdzixun.net'
+  - '+.cdzjryb.com'
   - '+.cdzmn.com'
   - '+.cdzspcls.com'
   - '+.cdzszp.com'
@@ -13472,6 +13486,7 @@ payload:
   - '+.chengdechina.com'
   - '+.chengdu-expat.com'
   - '+.chengdun.com'
+  - '+.chengduworldcon.com'
   - '+.chengduzhouming.com'
   - '+.chengedeco.com'
   - '+.chengezhao.com'
@@ -14720,6 +14735,7 @@ payload:
   - '+.ciotimes.com'
   - '+.ciotour.com'
   - '+.ciou.com'
+  - '+.ciouqt.com'
   - '+.cip.cc'
   - '+.cipgtrans.com'
   - '+.ciplawyer.com'
@@ -16984,6 +17000,7 @@ payload:
   - '+.dadetong.com'
   - '+.dadianstudio.com'
   - '+.dadicinema.com'
+  - '+.dadighost.com'
   - '+.dadijilu.com'
   - '+.dadipedia.com'
   - '+.dadiwang.com'
@@ -18386,6 +18403,7 @@ payload:
   - '+.dl158.net'
   - '+.dl2link.com'
   - '+.dl321.net'
+  - '+.dl556677.com'
   - '+.dl8z.com'
   - '+.dlangchina.com'
   - '+.dlbh.net'
@@ -19256,6 +19274,7 @@ payload:
   - '+.duouoo.com'
   - '+.duowan.com'
   - '+.duowanns.com'
+  - '+.duoxiangpai.com'
   - '+.duoxinqi.com'
   - '+.duoxuanyundian.com'
   - '+.duoyewu.com'
@@ -21826,7 +21845,6 @@ payload:
   - '+.fjstfc.com'
   - '+.fjtelecom.com'
   - '+.fjtianya.com'
-  - '+.fjtn.com'
   - '+.fjtv.net'
   - '+.fjty1688.com'
   - '+.fjutu.com'
@@ -23241,6 +23259,7 @@ payload:
   - '+.gfcname.com'
   - '+.gfcvisa.com'
   - '+.gfd178.com'
+  - '+.gfdj99665.com'
   - '+.gfdns.net'
   - '+.gfdsa.net'
   - '+.gfdun.icu'
@@ -23848,6 +23867,7 @@ payload:
   - '+.gouchezj.com'
   - '+.goufang.com'
   - '+.goufq.com'
+  - '+.goufw.com'
   - '+.goug.com'
   - '+.gougoujp.com'
   - '+.gougoutxt.com'
@@ -24289,6 +24309,7 @@ payload:
   - '+.gulutea.com'
   - '+.gumang.com'
   - '+.gumaor.com'
+  - '+.gumingnc.com'
   - '+.gumo.pro'
   - '+.gunfans.net'
   - '+.guntian.com'
@@ -26472,6 +26493,7 @@ payload:
   - '+.hk-vstart.com'
   - '+.hk.uy'
   - '+.hk515.net'
+  - '+.hk8g0dd.com'
   - '+.hkaco.com'
   - '+.hkaik.com'
   - '+.hkance.com'
@@ -27607,6 +27629,7 @@ payload:
   - '+.hubeixuekao.com'
   - '+.hubeiyanjiusheng.com'
   - '+.hubeiyongtai.com'
+  - '+.hubiazhi.com'
   - '+.hubokan.com'
   - '+.hubpd.com'
   - '+.hubu.com'
@@ -27711,6 +27734,7 @@ payload:
   - '+.huim.com'
   - '+.huimaiche.com'
   - '+.huiman.net'
+  - '+.huimatong.com'
   - '+.huimee.com'
   - '+.huimee.net'
   - '+.huimeisports.com'
@@ -29380,6 +29404,7 @@ payload:
   - '+.imiker.com'
   - '+.imindmap.cc'
   - '+.iminho.me'
+  - '+.iminisd.com'
   - '+.imipy.com'
   - '+.imitui.com'
   - '+.imixpark.com'
@@ -29876,7 +29901,6 @@ payload:
   - '+.irising.me'
   - '+.irlianmeng.com'
   - '+.irockbunny.com'
-  - '+.irockwill.com'
   - '+.iroing.com'
   - '+.ironfishchina.com'
   - '+.irongbei.com'
@@ -31542,6 +31566,7 @@ payload:
   - '+.jishida.vip'
   - '+.jishuchi.com'
   - '+.jishukong.com'
+  - '+.jishulink.com'
   - '+.jishuqq.com'
   - '+.jishux.com'
   - '+.jisi17.com'
@@ -31926,6 +31951,7 @@ payload:
   - '+.jnqccw.com'
   - '+.jnrain.com'
   - '+.jnsdgz.com'
+  - '+.jnshijia.com'
   - '+.jnshu.com'
   - '+.jnstdc.com'
   - '+.jntinchina.com'
@@ -32402,6 +32428,7 @@ payload:
   - '+.jugezi.com'
   - '+.juhaof.com'
   - '+.juhaokan.org'
+  - '+.juhcloud.com'
   - '+.juhe.com'
   - '+.juheng88.com'
   - '+.juheweb.com'
@@ -32903,6 +32930,7 @@ payload:
   - '+.kaiboer.com'
   - '+.kaichengschool.com'
   - '+.kaidanbao.com'
+  - '+.kaidany.com'
   - '+.kaidianbang.com'
   - '+.kaieconblog.net'
   - '+.kaifabang.com'
@@ -34218,6 +34246,7 @@ payload:
   - '+.kwaizt.com'
   - '+.kweaake.cyou'
   - '+.kwenku.com'
+  - '+.kwfser.com'
   - '+.kwimgs.com'
   - '+.kwin.wang'
   - '+.kwin.xyz'
@@ -34265,6 +34294,7 @@ payload:
   - '+.ky-express.com'
   - '+.ky0048.cc'
   - '+.ky010.vip'
+  - '+.ky107.co'
   - '+.ky151.co'
   - '+.ky5yx.com'
   - '+.ky958.com'
@@ -34327,6 +34357,7 @@ payload:
   - '+.l77777777.com'
   - '+.l7audiolab.com'
   - '+.l99.com'
+  - '+.l9p9b.xyz'
   - '+.la-mo.com'
   - '+.lab-z.com'
   - '+.labagd.com'
@@ -34565,6 +34596,7 @@ payload:
   - '+.lanzoup.com'
   - '+.lanzouq.com'
   - '+.lanzout.com'
+  - '+.lanzouu.com'
   - '+.lanzouw.com'
   - '+.lanzoux.com'
   - '+.lanzouy.com'
@@ -34680,7 +34712,6 @@ payload:
   - '+.lawinfochina.com'
   - '+.lawlingyun.com'
   - '+.lawnewscn.com'
-  - '+.laws5.com'
   - '+.lawschina.com'
   - '+.lawtimeimg.com'
   - '+.lawxin.com'
@@ -38400,6 +38431,7 @@ payload:
   - '+.mknn.net'
   - '+.mkshell.com'
   - '+.mksrvdns.com'
+  - '+.mkstone.club'
   - '+.mkszxh.com'
   - '+.mktcreator.com'
   - '+.mktdatatech.com'
@@ -38410,7 +38442,6 @@ payload:
   - '+.mkzhan.com'
   - '+.mkzhou.com'
   - '+.mkzoo.com'
-  - '+.ml-cg.com'
   - '+.ml-kq.com'
   - '+.mlairport.com'
   - '+.mlbuy.com'
@@ -38543,7 +38574,6 @@ payload:
   - '+.mobayx.com'
   - '+.mobcent.com'
   - '+.mobcloud.mobi'
-  - '+.mobdatas.com'
   - '+.mobeehome.com'
   - '+.mobgi.com'
   - '+.mobiapp.cloud'
@@ -39479,6 +39509,7 @@ payload:
   - '+.n12345.com'
   - '+.n127.com'
   - '+.n12m.cc'
+  - '+.n18081.com'
   - '+.n21.cc'
   - '+.n3293.com'
   - '+.n3762.com'
@@ -42860,6 +42891,7 @@ payload:
   - '+.q2zy.com'
   - '+.q3060.com'
   - '+.q5.com'
+  - '+.q6993.com'
   - '+.q6haqi.com'
   - '+.q6u.com'
   - '+.q77777777.com'
@@ -43970,6 +44002,7 @@ payload:
   - '+.qsbbs.net'
   - '+.qsbdc.com'
   - '+.qsboy.com'
+  - '+.qscfph.com'
   - '+.qschou.com'
   - '+.qsebao.com'
   - '+.qseeking.com'
@@ -44040,6 +44073,7 @@ payload:
   - '+.quandangdang.net'
   - '+.quandashi.com'
   - '+.quanduoduo.com'
+  - '+.quanfangtong.net'
   - '+.quanfangtongvip.com'
   - '+.quanfeng.tech'
   - '+.quanguoban.com'
@@ -44134,6 +44168,7 @@ payload:
   - '+.queniudns.net'
   - '+.queniufm.com'
   - '+.queniuhy.com'
+  - '+.queniuiq.com'
   - '+.queniukr.com'
   - '+.queniukw.com'
   - '+.queniurc.com'
@@ -44280,7 +44315,6 @@ payload:
   - '+.quxds.com'
   - '+.quxia.com'
   - '+.quxianchang.com'
-  - '+.quxiangtou.com'
   - '+.quxianzhuan.com'
   - '+.quxingdong.com'
   - '+.quxiu.com'
@@ -44390,6 +44424,7 @@ payload:
   - '+.qyule.org'
   - '+.qyvqg.com'
   - '+.qywww.net'
+  - '+.qyxgyu.com'
   - '+.qyxxpd.com'
   - '+.qyyqyj.com'
   - '+.qyzba.club'
@@ -44656,7 +44691,6 @@ payload:
   - '+.redcross-sha.org'
   - '+.redefine.ltd'
   - '+.redflag-linux.com'
-  - '+.redhai.com'
   - '+.redhome.cc'
   - '+.redhongan.com'
   - '+.redianduanzi.com'
@@ -44990,6 +45024,7 @@ payload:
   - '+.rmzt.com'
   - '+.rmzxb.com'
   - '+.rn-hswh.com'
+  - '+.rnbqvet.com'
   - '+.rnfengwo.com'
   - '+.rngtest.com'
   - '+.ro4.cc'
@@ -49486,7 +49521,6 @@ payload:
   - '+.sys-ele.com'
   - '+.syscan360.org'
   - '+.sysceo.com'
-  - '+.sysclk.com'
   - '+.syscxp.com'
   - '+.sysdyy120.com'
   - '+.sysengi.com'
@@ -49640,6 +49674,7 @@ payload:
   - '+.szhulian.com'
   - '+.szhulian.net'
   - '+.szhytrip.com'
+  - '+.szicc.net'
   - '+.szider.com'
   - '+.szisland.com'
   - '+.szjcyyy.com'
@@ -49877,7 +49912,6 @@ payload:
   - '+.taijicoder.com'
   - '+.taijiny.com'
   - '+.taijio.com'
-  - '+.taijutt.com'
   - '+.taijutv.com'
   - '+.taikang.com'
   - '+.taikanglife.com'
@@ -51028,6 +51062,7 @@ payload:
   - '+.tjptfhq.com'
   - '+.tjrge.com'
   - '+.tjsjnxh.com'
+  - '+.tjsjx.com'
   - '+.tjst.net'
   - '+.tjstats.com'
   - '+.tjtele.com'
@@ -51190,7 +51225,6 @@ payload:
   - '+.tohours.com'
   - '+.tohuo.com'
   - '+.toidea.com'
-  - '+.tok9.com'
   - '+.token-ad.com'
   - '+.tokenglish.com'
   - '+.tokensky.net'
@@ -51649,7 +51683,6 @@ payload:
   - '+.tsddu.com'
   - '+.tsdm.net'
   - '+.tsdxb.com'
-  - '+.tsfucai.com'
   - '+.tsg-online.net'
   - '+.tsggwl.com'
   - '+.tshaisen.com'
@@ -52281,10 +52314,12 @@ payload:
   - '+.u062.com'
   - '+.u14.com'
   - '+.u148.net'
+  - '+.u1563.com'
   - '+.u17.com'
   - '+.u17i.com'
   - '+.u17t.com'
   - '+.u21a.com'
+  - '+.u22011.com'
   - '+.u22033.com'
   - '+.u22055.com'
   - '+.u22066.com'
@@ -52294,6 +52329,7 @@ payload:
   - '+.u23011.com'
   - '+.u23022.com'
   - '+.u23033.com'
+  - '+.u23055.com'
   - '+.u25011.com'
   - '+.u25022.com'
   - '+.u2j2ha.com'
@@ -53634,6 +53670,7 @@ payload:
   - '+.vultrvps.com'
   - '+.vunion.net'
   - '+.vurl.link'
+  - '+.vurl3.vip'
   - '+.vutimes.com'
   - '+.vux.li'
   - '+.vv8.com'
@@ -56327,6 +56364,7 @@ payload:
   - '+.wycanyin.com'
   - '+.wycntv.com'
   - '+.wydbw.com'
+  - '+.wydfghjjh.live'
   - '+.wydljx.com'
   - '+.wydns.com'
   - '+.wyduihua.com'
@@ -56356,7 +56394,6 @@ payload:
   - '+.wywy6.com'
   - '+.wywyx.com'
   - '+.wyx365.com'
-  - '+.wyxbc.com'
   - '+.wyydsb.xin'
   - '+.wyzc.com'
   - '+.wyzdg.com'
@@ -56592,6 +56629,7 @@ payload:
   - '+.xcb-family.com'
   - '+.xcbank.com'
   - '+.xcdesign.net'
+  - '+.xcdn.global'
   - '+.xcexe.com'
   - '+.xcfunds.com'
   - '+.xcgjj.com'
@@ -58243,6 +58281,7 @@ payload:
   - '+.xpcha.com'
   - '+.xpdf.net'
   - '+.xpj0755.cc'
+  - '+.xpj0791.cc'
   - '+.xplian.net'
   - '+.xpsheying.com'
   - '+.xpsy.net'
@@ -58254,6 +58293,7 @@ payload:
   - '+.xq0356.com'
   - '+.xq5.com'
   - '+.xqb24.com'
+  - '+.xqbase.com'
   - '+.xqblog.com'
   - '+.xqbxz.com'
   - '+.xqckg.com'
@@ -59198,6 +59238,7 @@ payload:
   - '+.ybren.com'
   - '+.ybs120.com'
   - '+.ybscjp.com'
+  - '+.ybssdp.com'
   - '+.ybtong.com'
   - '+.ybtvyun.com'
   - '+.ybvip.com'
@@ -59386,6 +59427,7 @@ payload:
   - '+.yesanpole.com'
   - '+.yesapi.net'
   - '+.yesbt.cc'
+  - '+.yesclouds.com'
   - '+.yesdecor.com'
   - '+.yesense.com'
   - '+.yeshen.com'
@@ -59492,6 +59534,7 @@ payload:
   - '+.ygzt.net'
   - '+.yh596.com'
   - '+.yh598.com'
+  - '+.yh7761.com'
   - '+.yh99.cc'
   - '+.yhachina.com'
   - '+.yhbimg.com'
@@ -60480,6 +60523,7 @@ payload:
   - '+.youdiancms.com'
   - '+.youdingte.com'
   - '+.youdu.im'
+  - '+.youdubook.com'
   - '+.youduzw.com'
   - '+.youdwh.com'
   - '+.youease.net'
@@ -62959,6 +63003,7 @@ payload:
   - '+.zhongkezhuyan.com'
   - '+.zhongkongbancn.com'
   - '+.zhongkongdaikuan.com'
+  - '+.zhongleduo.net'
   - '+.zhongleny.com'
   - '+.zhonglian.com'
   - '+.zhonglianfactoring.com'
@@ -63740,7 +63785,6 @@ payload:
   - '+.zmren.com'
   - '+.zmrenwu.com'
   - '+.zmrgame.com'
-  - '+.zmsc.cc'
   - '+.zmsq.com'
   - '+.zmt.me'
   - '+.zmtc.com'
