--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1635,6 +1635,7 @@ payload:
   - '+.18dx.com'
   - '+.18guanjia.com'
   - '+.18kf.net'
+  - '+.18l.net'
   - '+.18ladys.com'
   - '+.18link.com'
   - '+.18ph.com'
@@ -3422,6 +3423,7 @@ payload:
   - '+.4async.com'
   - '+.4ci.cc'
   - '+.4cnzz.com'
+  - '+.4cola.com'
   - '+.4cun.com'
   - '+.4d4c.com'
   - '+.4dai.com'
@@ -3534,6 +3536,7 @@ payload:
   - '+.5117tools.com'
   - '+.5118.com'
   - '+.5118img.com'
+  - '+.5119.net'
   - '+.511god.net'
   - '+.511mv.com'
   - '+.511wan.com'
@@ -4932,6 +4935,7 @@ payload:
   - '+.605-zy.com'
   - '+.605dns.com'
   - '+.605zy.co'
+  - '+.607.tv'
   - '+.6070.tv'
   - '+.6071.com'
   - '+.607777.cc'
@@ -9372,6 +9376,7 @@ payload:
   - '+.baicai.com'
   - '+.baicaio.com'
   - '+.baicaiyouxuan.com'
+  - '+.baicaolu.net'
   - '+.baicaosoft.com'
   - '+.baicells.com'
   - '+.baichanghui.com'
@@ -12668,7 +12673,6 @@ payload:
   - '+.cdn-files.net'
   - '+.cdn-gw-dv.net'
   - '+.cdn-hotels.com'
-  - '+.cdn-ng.net'
   - '+.cdn-speed.com'
   - '+.cdn-static.farfetch-contents.com'
   - '+.cdn-uc.cc'
@@ -15652,6 +15656,7 @@ payload:
   - '+.coderplanets.com'
   - '+.coderprepares.com'
   - '+.codersec.net'
+  - '+.codersrc.com'
   - '+.coderxing.com'
   - '+.coderyuan.com'
   - '+.coderzh.com'
@@ -17551,6 +17556,7 @@ payload:
   - '+.deifei.com'
   - '+.deifgs.com'
   - '+.deikuo.com'
+  - '+.dejiplaza.com'
   - '+.dekeego.com'
   - '+.dektw.com'
   - '+.dekyy.com'
@@ -32648,6 +32654,7 @@ payload:
   - '+.kafka.cc'
   - '+.kagirl.net'
   - '+.kahao123.com'
+  - '+.kai-asia-hk.com'
   - '+.kai-ying.com'
   - '+.kaiba315.com'
   - '+.kaiboda.org'
@@ -34627,6 +34634,7 @@ payload:
   - '+.leftfm.com'
   - '+.leftlady.com'
   - '+.leftso.com'
+  - '+.lefuzuwu.com'
   - '+.legend-go.com'
   - '+.legendsec.com'
   - '+.legendtkl.com'
@@ -36214,7 +36222,6 @@ payload:
   - '+.lucky286.com'
   - '+.luckyair.net'
   - '+.luckycoffee.com'
-  - '+.luckyjia.com'
   - '+.luckyxp.net'
   - '+.lucode.net'
   - '+.lucoder.com'
@@ -37859,6 +37866,7 @@ payload:
   - '+.miitip.org'
   - '+.mij.cc'
   - '+.mijiadns.com'
+  - '+.mijian360.com'
   - '+.mijiannet.com'
   - '+.mijiayoupin.com'
   - '+.mijisou.com'
@@ -42062,6 +42070,7 @@ payload:
   - '+.pocsuite.org'
   - '+.podaaec.cyou'
   - '+.podinns.com'
+  - '+.podjiasu.org'
   - '+.poem88.com'
   - '+.poemaster.com'
   - '+.poemlife.com'
@@ -42776,6 +42785,7 @@ payload:
   - '+.qgwsp.com'
   - '+.qgxl.org'
   - '+.qgysj.org'
+  - '+.qgyyzs.net'
   - '+.qgzzz.com'
   - '+.qh-cdn.com'
   - '+.qh-lb.com'
@@ -44594,6 +44604,7 @@ payload:
   - '+.richinfer.net'
   - '+.richkays.com'
   - '+.richong.com'
+  - '+.richtech123.com'
   - '+.richtj.com'
   - '+.ricklj.com'
   - '+.rickyfabrics.com'
@@ -44762,6 +44773,7 @@ payload:
   - '+.rongchenjx.com'
   - '+.rongdewang.com'
   - '+.rongechain.com'
+  - '+.ronghaosk.com'
   - '+.ronghope.com'
   - '+.ronghub.com'
   - '+.ronghuiad.com'
@@ -48988,6 +49000,7 @@ payload:
   - '+.sx189.com'
   - '+.sx267.com'
   - '+.sxafz.com'
+  - '+.sxbada.com'
   - '+.sxbang.net'
   - '+.sxbawy.com'
   - '+.sxccb.com'
@@ -51324,6 +51337,7 @@ payload:
   - '+.tshe.me'
   - '+.tshiny.com'
   - '+.tshmkj.com'
+  - '+.tshock.cc'
   - '+.tshtech.com'
   - '+.tshu.net'
   - '+.tsichuan.com'
@@ -51652,6 +51666,7 @@ payload:
   - '+.turnitin.org.in'
   - '+.turnitincn.com'
   - '+.turnitinuk.net'
+  - '+.turuio.com'
   - '+.tusapi.com'
   - '+.tusay.net'
   - '+.tuscdn.com'
@@ -55149,6 +55164,7 @@ payload:
   - '+.wmtp.net'
   - '+.wmupd.com'
   - '+.wmvideo.com'
+  - '+.wmxpro.com'
   - '+.wmxxgy.com'
   - '+.wmxxgz.com'
   - '+.wmxxwh.com'
@@ -63702,6 +63718,7 @@ payload:
   - '+.zujuan.com'
   - '+.zujuanyi.com'
   - '+.zuk.com'
+  - '+.zuka666.com'
   - '+.zukang88.com'
   - '+.zuker.im'
   - '+.zulijian.com'
